--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -13,7 +13,19 @@
       }
     </style>
   </head>
-  <body data-sveltekit-preload-data="hover" style="margin: 0px">
-    <div style="display: contents">%sveltekit.body%</div>
+  <body
+    data-sveltekit-preload-data="hover"
+    style="margin: 0px; max-height: 100vh"
+  >
+    <div
+      style="
+        display: contents;
+        max-height: 100vh;
+        display: flex;
+        flex-direction: column;
+      "
+    >
+      %sveltekit.body%
+    </div>
   </body>
 </html>
